--- a/pricelens/templates/pricelens/queue.html
+++ b/pricelens/templates/pricelens/queue.html
@@ -91,8 +91,8 @@
             </div>
             <div class="join">
                 {% if page_obj.has_previous %}
-                    <a href="?page=1" class="join-item btn btn-sm">Первая</a>
-                    <a href="?page={{ page_obj.previous_page_number }}" class="join-item btn btn-sm">«</a>
+                    <a href="?page=1&{{ query_params }}" class="join-item btn btn-sm">Первая</a>
+                    <a href="?page={{ page_obj.previous_page_number }}&{{ query_params }}" class="join-item btn btn-sm">«</a>
                 {% else %}
                     <button class="join-item btn btn-sm btn-disabled">Первая</button>
                     <button class="join-item btn btn-sm btn-disabled">«</button>
@@ -100,15 +100,15 @@
 
                 {% for num in paginator.page_range %}
                     {% if page_obj.number == num %}
-                        <a href="?page={{ num }}" class="join-item btn btn-sm btn-active">{{ num }}</a>
+                        <a href="?page={{ num }}&{{ query_params }}" class="join-item btn btn-sm btn-active">{{ num }}</a>
                     {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-                        <a href="?page={{ num }}" class="join-item btn btn-sm">{{ num }}</a>
+                        <a href="?page={{ num }}&{{ query_params }}" class="join-item btn btn-sm">{{ num }}</a>
                     {% endif %}
                 {% endfor %}
 
                 {% if page_obj.has_next %}
-                    <a href="?page={{ page_obj.next_page_number }}" class="join-item btn btn-sm">»</a>
-                    <a href="?page={{ paginator.num_pages }}" class="join-item btn btn-sm">Последняя</a>
+                    <a href="?page={{ page_obj.next_page_number }}&{{ query_params }}" class="join-item btn btn-sm">»</a>
+                    <a href="?page={{ paginator.num_pages }}&{{ query_params }}" class="join-item btn btn-sm">Последняя</a>
                 {% else %}
                     <button class="join-item btn btn-sm btn-disabled">»</button>
                     <button class="join-item btn btn-sm btn-disabled">Последняя</button>
