fix(cadence): add "new" bucket
For suppliers with only one entry, we'll add "new" bucket.
Reasoning: when searching for a supplier, we want to make sure we find all that have at least one entry.

--- a/pricelens/templates/pricelens/cadence.html
+++ b/pricelens/templates/pricelens/cadence.html
@@ -53,14 +53,27 @@
                         <tr class="hover:bg-base-300">
                             <td>{{ profile.supplier.supid }}</td>
                             <td>{{ profile.supplier.name }}</td>
-                            <td>{{ profile.median_gap_days }}</td>
-                            <td>{{ profile.sd_gap|floatformat:2 }}</td>
+                            <td>
+                                {% if profile.median_gap_days is not None %}
+                                    {{ profile.median_gap_days }}
+                                {% else %}
+                                    <span class="text-base-content/50">новый</span>
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if profile.sd_gap is not None %}
+                                    {{ profile.sd_gap|floatformat:2 }}
+                                {% else %}
+                                    <span class="text-base-content/50">новый</span>
+                                {% endif %}
+                            </td>
                             <td>{{ profile.days_since_last }}</td>
                             <td>
                                 <span class="badge
                                     {% if profile.bucket == 'consistent' %}badge-success{% endif %}
                                     {% if profile.bucket == 'inconsistent' %}badge-warning{% endif %}
                                     {% if profile.bucket == 'dead' %}badge-error{% endif %}
+                                    {% if profile.bucket == 'new' %}badge-info{% endif %}
                                 ">{{ profile.get_bucket_display }}</span>
                             </td>
                         </tr>
