improvement(upload_status.html): display ACCEPTABLE_ERROR_THRESHOLD

--- a/emex_upload/templates/emex_upload/upload_status.html
+++ b/emex_upload/templates/emex_upload/upload_status.html
@@ -116,7 +116,7 @@
         <div id="confirmation-buttons" class="mt-6 w-full max-w-md hidden">
             <div class="alert alert-warning">
                 <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" /></svg>
-                <span>Превышен порог ошибок. Вы уверены, что хотите загрузить только корректные строки?</span>
+                <span>Превышен порог ошибок ({{ ACCEPTABLE_ERROR_THRESHOLD }}). Вы уверены, что хотите загрузить только корректные строки?</span>
             </div>
             <div class="mt-4 flex justify-center gap-4">
                 <button id="confirm-upload-btn" class="btn btn-primary">Да, загрузить корректные строки</button>
